# WhoDini

./: .gitignore  README.md  WhoDini.lnk  dataset_bias_within_bb.py  det_500m_first_conv.onnx  exploreConvLayers.ipynb  fyolo.py  main.py  pyproject.toml  requirements.txt  requirementsWindows.txt  server.py  stream.py  whodini_conda_env_macAppleSillicon.yml  yolo11_trial.ipynb  yolo26n_face_training_using_widerFaceDataset.ipynb
FD2-model/: .gitignore  s.py  script.py  webcam.py
Research/: How YOLO works.md
interface_files/: det_500m_intermediate.onnx  insightfaceTest.py  insightface_embedder.py  interfaces.py  loadONNX.py  pipeline.py  runONNX.py  yolo_detector.py
vectors extraction/: extract_yolo_activations.py  inspect_conv_layers.py  view_weights.py  visualize_activation.py  yolo26_activations.npz
